--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <ul>
                         <li data-aos="zoom-out" data-aos-duration="1000">
                             <div class = "content">
-                                <a data-fancybox href="https://www.youtube.com/watch?v=SMNW0IbzoHc" class = "round-button"><i class="fas fa-play"></i></a>
+                                <a class = "round-button scroll-play"><i class="fas fa-play"></i></a>
                             </div>
                             <h3 class = "chapter-header">CHAPTER #1</h3>
                             <h3 class = "chapter-subheader">Get to Know Stock Patterns</h3>
